--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^5.24.1",
+    "@tanstack/react-query": "^5.28.9",
+    "@tanstack/react-query-devtools": "^5.28.10",
     "@tanstack/react-table": "^8.13.2",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
