--- a/package.json
+++ b/package.json
@@ -20,49 +20,49 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^5.28.9",
-    "@tanstack/react-query-devtools": "^5.28.10",
-    "@tanstack/react-table": "^8.13.2",
-    "axios": "^1.6.7",
+    "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query-devtools": "^5.29.2",
+    "@tanstack/react-table": "^8.16.0",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.1",
-    "date-fns": "^3.3.1",
-    "embla-carousel-autoplay": "^8.0.0",
-    "embla-carousel-react": "^8.0.0",
+    "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.0.2",
+    "embla-carousel-react": "^8.0.2",
     "form": "^0.2.4",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.1.5",
     "js-base64": "^3.7.7",
     "lucide-react": "^0.315.0",
-    "next": "14.1.0",
+    "next": "14.1.1",
     "next-themes": "^0.2.1",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-daum-postcode": "^3.1.3",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-hook": "^0.0.1",
-    "react-hook-form": "^7.51.0",
-    "sharp": "^0.33.2",
-    "sonner": "^1.4.3",
-    "tailwind-merge": "^2.2.1",
+    "react-hook-form": "^7.51.3",
+    "sharp": "^0.33.3",
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
     "vaul": "^0.9.0",
-    "zod": "^3.22.4",
+    "zod": "^3.22.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "^8.4.38",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
     "webpack": "^5.91.0"
   }
 }
